[package]
name = "convergence-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "net", "rt-multi-thread", "macros", "io-util", "io-std" ] }
convergence = "0.9.1"
async-trait = "0.1"
sqlparser = "0.26"
duckdb = { version = "0.6.1", features = ["bundled"] }


